--- a/viz/style.css
+++ b/viz/style.css
@@ -19,3 +19,24 @@
 #cur_source {
     margin: 30;
 }
+
+#cell {
+    background-color:rgb(219, 247, 251); 
+    border-radius: 25px; 
+    padding: 15px; 
+    white-space: pre-wrap;
+}
+
+#correct_cell {
+    background-color:rgb(50, 235, 4); 
+    border-radius: 25px; 
+    padding: 15px; 
+    white-space: pre-wrap;
+}
+
+#my_cell {
+    background-color:rgb(255, 47, 47); 
+    border-radius: 25px; 
+    padding: 15px; 
+    white-space: pre-wrap;
+}
